fix: rollback scrollbar

--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -7,21 +7,16 @@
   overscroll-behavior: none;
 }
 
-html,
-body,
 #__next {
-  width: 100%;
-  height: 100%;
-  position: relative;
+  height: auto;
 }
 
 html,
 body {
+  width: 100%;
+  height: 100vh;
+  position: relative;
   overflow-x: hidden;
-}
-
-body {
-  padding-right: 17px;
 }
 
 .app-outer-container {
